--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,6 @@ jobs:
           password: ${{ secrets.DOCKER_PASS }}
 
       - run: |
-          docker build -t dkv6/nodered:latest .
-          docker push dkv6/nodered:latest
+          docker build -t dkv6/nodered:${{ github.sha }} .
+          docker push dkv6/nodered:${{ github.sha }}
+
