--- a/ansible/roles/k3s/tasks/main.yml
+++ b/ansible/roles/k3s/tasks/main.yml
@@ -2,3 +2,8 @@
   shell: curl -sfL https://get.k3s.io | sh -
   args:
     creates: /usr/local/bin/k3s
+
+- name: Fix kubeconfig permissions
+  file:
+    path: /etc/rancher/k3s/k3s.yaml
+    mode: '0644'
