docker related files cenged

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,5 +15,7 @@ spec:
       containers:
         - name: node-red
           image: dkv6/node-red:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 1880
+
