--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Build and Push Node-RED Image
+name: Build and Deploy Node-RED
 
 on:
   push:
@@ -12,13 +12,27 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Log in to Docker Hub
+      - name: Set Image Tag
+        id: vars
+        run: echo "TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+
+      - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/nodered:latest ./node-red
+      - name: Build Image
+        run: docker build -t dkv6/nodered:${{ steps.vars.outputs.TAG }} ./node-red
 
-      - name: Push Docker image
+      - name: Push Image
+        run: docker push dkv6/nodered:${{ steps.vars.outputs.TAG }}
+
+      - name: Update Kubernetes Deployment
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/nodered:latest
+          sed -i "s|image: .*|image: dkv6/nodered:${{ steps.vars.outputs.TAG }}|" k8s/deployment.yaml
+
+      - name: Commit and Push Updated Deployment
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add k8s/deployment.yaml
+          git commit -m "Update image to ${{ steps.vars.outputs.TAG }}"
+          git push
