--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: node-red-service
 spec:
-  type: NodePort
   selector:
     app: node-red
   ports:
     - port: 1880
       targetPort: 1880
-      nodePort: 30080
+  type: ClusterIP
