--- a/node-red/.config.users.json
+++ b/node-red/.config.users.json
@@ -15,6 +15,12 @@
             },
             "tours": {
                 "welcome": "4.1.5"
+            },
+            "dialog": {
+                "export": {
+                    "pretty": true,
+                    "json-view": true
+                }
             }
         },
         "menu-deploymenu-item-node": true,
